--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -27,4 +27,5 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-aop')
 }
